--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Entrad en Casoola: bono 500€ + 200 tiradas, depósito mín. 20€ y rollover x35. ¡Haced vuestro check-in y jugad en el Grand Hotel de 2026!">
+    <meta name="description" content="Entrad en Casoola: bono 500€ + 200 tiradas, depósito mín. 20€ y rollover x35. ¡Haced vuestro check-in y jugad en el Grand Hotel de 2026! Online.">
     <meta name="keywords" content="Casoola, Casoola Casino, casino online, casino España, tragaperras, casino en vivo, bono casino, juegos casino">
     <meta name="author" content="Casoola Casino">
     <meta name="robots" content="index, follow">
@@ -13,8 +13,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://casoola.com/es/">
-    <meta property="og:title" content="Casoola Casino 2026 ▷ Bono 500€ + 200 Tiradas Gratis">
-    <meta property="og:description" content="Entrad en Casoola: bono 500€ + 200 tiradas, depósito mín. 20€ y rollover x35. ¡Haced vuestro check-in y jugad en el Grand Hotel de 2026!">
+    <meta property="og:title" content="Casoola Casino 2026: ▷ Bono 500€ + 200 Tiradas Gratis!">
+    <meta property="og:description" content="Entrad en Casoola: bono 500€ + 200 tiradas, depósito mín. 20€ y rollover x35. ¡Haced vuestro check-in y jugad en el Grand Hotel de 2026! Online.">
     <meta property="og:image" content="https://casoola.com/assets/images/hero.webp">
     <meta property="og:locale" content="es_ES">
     <meta property="og:site_name" content="Casoola Casino">
@@ -22,11 +22,11 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://casoola.com/es/">
-    <meta name="twitter:title" content="Casoola Casino 2026 ▷ Bono 500€ + 200 Tiradas Gratis">
-    <meta name="twitter:description" content="Entrad en Casoola: bono 500€ + 200 tiradas, depósito mín. 20€ y rollover x35. ¡Haced vuestro check-in y jugad en el Grand Hotel de 2026!">
+    <meta name="twitter:title" content="Casoola Casino 2026: ▷ Bono 500€ + 200 Tiradas Gratis!">
+    <meta name="twitter:description" content="Entrad en Casoola: bono 500€ + 200 tiradas, depósito mín. 20€ y rollover x35. ¡Haced vuestro check-in y jugad en el Grand Hotel de 2026! Online.">
     <meta name="twitter:image" content="https://casoola.com/assets/images/hero.webp">
     
-    <title>Casoola Casino 2026 ▷ Bono 500€ + 200 Tiradas Gratis</title>
+    <title>Casoola Casino 2026: ▷ Bono 500€ + 200 Tiradas Gratis!</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="apple-touch-icon" href="favicon.svg">
     <link rel="preconnect" href="https://casoola.com">
@@ -81,8 +81,8 @@
             <div class="welcome-banner__content">
                 <h2 class="welcome-banner__title">Casoola Casino</h2>
                 <p class="welcome-banner__subtitle">Grand Hotel Art Deco de los años 30</p>
-                <a href="{{link}}" class="welcome-banner__button button-image button-image--gold">
-                    <img src="assets/images/button-hero.webp" alt="Haced reserva de estancia en Casoola" class="button-image__img">
+                <a href="{{link}}" class="welcome-banner__button button-image button-image--red">
+                    <img src="assets/images/button2.webp" alt="Haced reserva de estancia en Casoola" class="button-image__img">
                     <span class="button-image__text">HACED RESERVA DE ESTANCIA EN CASOOLA</span>
                 </a>
             </div>
@@ -260,7 +260,6 @@
             <div class="content-block content-block--bg-2" style="margin-bottom: var(--spacing-xl);">
                 <div class="content-block__overlay"></div>
                 <div class="content-block__inner">
-                    <p class="content-block__text" style="margin-bottom: var(--spacing-lg);">Aquí está el desglose de los principales socios de software que suministran el entretenimiento:</p>
                     <div class="table-wrapper" style="margin-top: var(--spacing-lg);">
                         <table class="specs-table">
                             <thead>
@@ -776,36 +775,6 @@
                 </div>
             </article>
 
-            <article class="content-block content-block--bg-3" style="margin-bottom: var(--spacing-xl);">
-                <div class="content-block__overlay"></div>
-                <div class="content-block__inner">
-                    <h3 class="content-block__title">Casoola en vuestra mano: el hotel portátil</h3>
-                    <p class="content-block__text">El hotel Casoola se desplaza con vosotros gracias a una interfaz móvil totalmente optimizada que funciona con la agilidad de un servicio de habitaciones de lujo. Aunque no requiere descarga desde tiendas oficiales, el sistema de acceso directo (PWA) permite disfrutar de toda la seguridad del casino con un solo toque. Instalad la aplicación siguiendo estas instrucciones según el sistema operativo que tengáis:</p>
-                    <div style="margin-top: var(--spacing-lg);">
-                        <h4 style="color: var(--color-accent); margin-bottom: var(--spacing-sm);">Para usuarios de Android:</h4>
-                        <ol style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
-                            <li>Abrid el navegador haciendo clic en el enlace oficial de <strong>Casoola</strong>.</li>
-                            <li>Clic en el icono del menú (los <strong>tres puntos</strong> de la esquina superior derecha).</li>
-                            <li>Buscad la opción "<strong>Añadir a la pantalla de inicio</strong>".</li>
-                            <li>Al confirmar el nombre ya podréis acceder al Grand Hotel en el menú de aplicaciones.</li>
-                        </ol>
-                        <h4 style="color: var(--color-accent); margin-top: var(--spacing-lg); margin-bottom: var(--spacing-sm);">Para usuarios de iOS (iPhone/iPad):</h4>
-                        <ol style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
-                            <li>Abrid <strong>Safari</strong> y buscad el portal de <strong>Casoola</strong>.</li>
-                            <li>Haz clic el botón de "<strong>Compartir</strong>" (el icono del cuadrado con la flecha hacia arriba).</li>
-                            <li>En el menú, hacer clic en "<strong>Añadir a la pantalla de inicio</strong>".</li>
-                            <li>Ya podéis entrar a vuestra suite de juego con un solo toque.</li>
-                        </ol>
-                    </div>
-                    <div style="text-align: center; margin-top: var(--spacing-lg);">
-                        <a href="{{link}}" class="button-image button-image--red">
-                            <img src="assets/images/button2.webp" alt="Descargad Casoola en el móvil" class="button-image__img">
-                            <span class="button-image__text">DESCARGAD CASOOLA EN EL MÓVIL</span>
-                        </a>
-                    </div>
-                </div>
-            </article>
-
             <article class="content-block content-block--bg-2">
                 <div class="content-block__overlay"></div>
                 <div class="content-block__inner">
@@ -836,6 +805,36 @@
                         <a href="{{link}}" class="button-image button-image--red">
                             <img src="assets/images/button2.webp" alt="Juego Responsable" class="button-image__img">
                             <span class="button-image__text">JUEGO RESPONSABLE</span>
+                        </a>
+                    </div>
+                </div>
+            </article>
+
+            <article class="content-block content-block--bg-3" style="margin-bottom: var(--spacing-xl);">
+                <div class="content-block__overlay"></div>
+                <div class="content-block__inner">
+                    <h3 class="content-block__title">Casoola en vuestra mano: el hotel portátil</h3>
+                    <p class="content-block__text">El hotel Casoola se desplaza con vosotros gracias a una interfaz móvil totalmente optimizada que funciona con la agilidad de un servicio de habitaciones de lujo. Aunque no requiere descarga desde tiendas oficiales, el sistema de acceso directo (PWA) permite disfrutar de toda la seguridad del casino con un solo toque. Instalad la aplicación siguiendo estas instrucciones según el sistema operativo que tengáis:</p>
+                    <div style="margin-top: var(--spacing-lg);">
+                        <h4 style="color: var(--color-accent); margin-bottom: var(--spacing-sm);">Para usuarios de Android:</h4>
+                        <ol style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
+                            <li>Abrid el navegador haciendo clic en el enlace oficial de <strong>Casoola</strong>.</li>
+                            <li>Clic en el icono del menú (los <strong>tres puntos</strong> de la esquina superior derecha).</li>
+                            <li>Buscad la opción "<strong>Añadir a la pantalla de inicio</strong>".</li>
+                            <li>Al confirmar el nombre ya podréis acceder al Grand Hotel en el menú de aplicaciones.</li>
+                        </ol>
+                        <h4 style="color: var(--color-accent); margin-top: var(--spacing-lg); margin-bottom: var(--spacing-sm);">Para usuarios de iOS (iPhone/iPad):</h4>
+                        <ol style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
+                            <li>Abrid <strong>Safari</strong> y buscad el portal de <strong>Casoola</strong>.</li>
+                            <li>Haz clic el botón de "<strong>Compartir</strong>" (el icono del cuadrado con la flecha hacia arriba).</li>
+                            <li>En el menú, hacer clic en "<strong>Añadir a la pantalla de inicio</strong>".</li>
+                            <li>Ya podéis entrar a vuestra suite de juego con un solo toque.</li>
+                        </ol>
+                    </div>
+                    <div style="text-align: center; margin-top: var(--spacing-lg);">
+                        <a href="{{link}}" class="button-image button-image--red">
+                            <img src="assets/images/button2.webp" alt="Descargad Casoola en el móvil" class="button-image__img">
+                            <span class="button-image__text">DESCARGAD CASOOLA EN EL MÓVIL</span>
                         </a>
                     </div>
                 </div>
