--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <div class="welcome-banner__content">
                 <h2 class="welcome-banner__title">Casoola Casino</h2>
                 <p class="welcome-banner__subtitle">Grand Hotel Art Deco de los años 30</p>
-                <a href="{{link}}" class="welcome-banner__button button-image button-image--red">
-                    <img src="assets/images/button2.webp" alt="Haced reserva de estancia en Casoola" class="button-image__img">
+                <a href="{{link}}" class="welcome-banner__button button-image button-image--gold">
+                    <img src="assets/images/button-hero.webp" alt="Haced reserva de estancia en Casoola" class="button-image__img">
                     <span class="button-image__text">HACED RESERVA DE ESTANCIA EN CASOOLA</span>
                 </a>
             </div>
