--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 <h2 class="welcome-banner__title">Casoola Casino</h2>
                 <p class="welcome-banner__subtitle">Grand Hotel Art Deco de los años 30</p>
                 <a href="{{link}}" class="welcome-banner__button button-image button-image--gold">
-                    <img src="assets/images/button-hero.webp" alt="Haced reserva de estancia en Casoola" class="button-image__img">
-                    <span class="button-image__text">HACED RESERVA DE ESTANCIA EN CASOOLA</span>
+                    <img src="assets/images/button-hero.webp" alt="Jugar ahora" class="button-image__img">
+                    <span class="button-image__text">JUGAR AHORA</span>
                 </a>
             </div>
         </div>
@@ -814,7 +814,7 @@
                 <div class="content-block__overlay"></div>
                 <div class="content-block__inner">
                     <h3 class="content-block__title">Casoola en vuestra mano: el hotel portátil</h3>
-                    <p class="content-block__text">El hotel Casoola se desplaza con vosotros gracias a una interfaz móvil totalmente optimizada que funciona con la agilidad de un servicio de habitaciones de lujo. Aunque no requiere descarga desde tiendas oficiales, el sistema de acceso directo (PWA) permite disfrutar de toda la seguridad del casino con un solo toque. Instalad la aplicación siguiendo estas instrucciones según el sistema operativo que tengáis:</p>
+                    <p class="content-block__text">El hotel Casoola se desplaza con vosotros gracias a una interfaz móvil totalmente optimizada que funciona con la agilidad de un servicio de habitaciones de lujo. Aunque no requiere descarga desde tiendas oficiales, el sistema de acceso directo (PWA) permite disfrutar de toda la seguridad del casino con un solo toque. Instalad la aplicación siguiendo estas instrucciones según el sistema operativo que tengas:</p>
                     <div style="margin-top: var(--spacing-lg);">
                         <h4 style="color: var(--color-accent); margin-bottom: var(--spacing-sm);">Para usuarios de Android:</h4>
                         <ol style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
